<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="64dp"
    android:background="@color/light_blue"

    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUserWriting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/white"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="150"
        app:hintTextColor="@color/black"
        app:counterTextColor="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUserWriting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/activity_main_tilUserWriting_text"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/tilUserWriting"
        app:layout_constraintStart_toStartOf="@id/tilUserWriting"
        android:text="@string/activity_main_bPlay_text"
        android:textColor="@color/white" />

    <RadioGroup
        android:id="@+id/rgBottomsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bPlay"
        app:layout_constraintStart_toStartOf="@id/bPlay"
        android:layout_marginTop="80dp">

        <RadioButton
            android:id="@+id/rbSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/bPlay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/activity_main_rbSpanish_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/rbSpanish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/activity_main_rbEnglish_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

        <RadioButton
            android:id="@+id/rbFrench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/rbEnglish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/activity_main_rbFrench_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

        <RadioButton
            android:id="@+id/rbItalian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/rbFrench"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/activity_main_rbItalian_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

        <RadioButton
            android:id="@+id/rbGerman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/rbItalian"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/activity_main_rbGerman_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

        <RadioButton
            android:id="@+id/rbPortuguese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/rbGerman"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/activity_main_rbPortuguese_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

    </RadioGroup>

    <ImageView
        android:id="@+id/ivSound"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
        app:layout_constraintTop_toBottomOf="@id/tilUserWriting"
        app:layout_constraintStart_toEndOf="@id/bPlay"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rgBottomsGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/medium_dark_blue"
        android:text="GO"
        android:textColor="@color/medium_dark_blue"
        app:icon="@drawable/ic_go_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>


    <!--<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MainActivity">

        <RadioButton
            android:id="@+id/rbSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/activity_main_rbSpanish_text"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:buttonTint="@color/dark_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>-->